<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".example01_async_task.JoinActivity">

    <EditText
        android:id="@+id/et_join_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_email" />

    <EditText
        android:id="@+id/et_join_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_id" />

    <EditText
        android:id="@+id/et_join_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_pw" />

    <Button
        android:id="@+id/btn_do_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_join" />

</LinearLayout>